tests/lean/1870.lean.expected.out
1870.lean:20:2-20:35: error: type mismatch
  congrArg (@OfNat.ofNat Nat 0) (congrArg (@Zero.toOfNat0 Nat) ?_)
has type
  OfNat.ofNat 0 = OfNat.ofNat 0 : Prop
but is expected to have type
  OfNat.ofNat 0 = OfNat.ofNat 1 : Prop
1870.lean:24:2-24:16: error: tactic 'apply' failed, failed to unify
  ?f ?a₁ = ?f ?a₂
with
  OfNat.ofNat 0 = OfNat.ofNat 1
⊢ OfNat.ofNat 0 = OfNat.ofNat 1
1870.lean:29:2-29:16: error: tactic 'apply' failed, failed to unify
  ?f ?a₁ = ?f ?a₂
with
  OfNat.ofNat 0 = OfNat.ofNat 1
⊢ OfNat.ofNat 0 = OfNat.ofNat 1
